# SO2

./: CMakeLists.txt  README.md
Project_1/Headers/: philoProblem.h  philoProblem2.h
Project_1/Sources/: main.cpp  philoProblem.cpp  philoProblem2.cpp
Project_2/: Constants.cpp  main.cpp  main2.cpp  startup.cpp
Project_2/Client/: main.cpp
Project_2/Headers/: client.h  connection.h  server.h
Project_2/Server/: main.cpp
Project_2/Sources/: client.cpp  connection.cpp  main2.cpp  server.cpp
